# FracDimPy

./: .bandit  .flake8  .gitignore  .isort.cfg  CODE_OF_CONDUCT.md  CONTRIBUTING.md  JOSS_CHECKLIST.md  JOSS_submit.md  MANIFEST.in  README.md  README_CN.md  README_EN.md  compile_paper.bat  count_words.py  mypy.ini  paper.bib  paper.md  pyproject.toml  setup.py
.claude/: settings.local.json
.github/workflows/: build.yml  ci.yml  code-quality.yml  performance.yml  test.yml
JOSS/: JOSS.md
docs/: conf.py  index.rst
examples/: generate_publication_figures.py  test_box_counting_with_patterns.py  validation_box_counting.py
examples/generator/: test_cantor_set.py  test_dla.py  test_fbm_curve.py  test_fbm_surface.py  test_koch.py  test_menger_sponge.py  test_random_walk.py  test_sierpinski.py  test_sierpinski_carpet.py  test_takagi_curve.py  test_takagi_surface.py  test_vicsek.py  test_wm_curve.py  test_wm_surface.py
examples/monofractal/: analyze_takagi_surface.py  box_counting_surface_data.csv  structural_function_data.txt  test_box_counting_curve.py  test_box_counting_image.py  test_box_counting_porous.py  test_box_counting_scatter.py  test_box_counting_surface.py  test_correlation_dimension.py  test_dfa.py  test_hurst.py  test_information_dimension.py  test_sandbox.py  test_structural_function.py  test_takagi_methods.py  test_variogram.py  variogram_1d_data.npy
examples/multifractal/: analyze_nmr_data.py  check_metrics.py  demo_visualization.py  mf_dem_data.tif  mf_solid_data.npy  test_mf_curve_dual.py  test_mf_curve_single.py  test_mf_dfa.py  test_mf_image.py
examples/validate/: Figure_DFA_RS_Validation.eps  analyze_nmr_data.py  analyze_takagi_surface.py  generate_publication_figures.py  nmr.xlsx  nmr_multifractal_analysis.eps  validate_dfa_rs.py
jats/: paper.jats
src/fracDimPy/: __init__.py
tests/: conftest.py
tests/generator/: cantor_set_level6.csv  test_cantor_set.py  test_dla.py  test_fbm_curve.py  test_fbm_surface.py  test_koch.py  test_menger_sponge.py  test_random_walk.py  test_sierpinski.py  test_sierpinski_carpet.py  test_takagi_curve.py  test_takagi_surface.py  test_vicsek.py  test_wm_curve.py  test_wm_surface.py
tests/monofractal/: box_counting_curve_data.xlsx  box_counting_scatter_data.xlsx  test_box_counting_curve.py  test_box_counting_image.py  test_box_counting_porous.py  test_box_counting_scatter.py  test_box_counting_surface.py  test_correlation_dimension.py  test_dfa.py  test_hurst.py  test_information_dimension.py  test_sandbox.py  test_structural_function.py  test_takagi_methods.py  test_variogram.py  variogram_surface_data.tif
tests/multifractal/: mf_curve_dual_1.xlsx  mf_curve_dual_2.xlsx  (+5 more)
(+27 files in other folders)
